--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
     <!-- header  start  -->
-    <!-- 
+     
     <header id="navigation" class="navigation container-fluid  p-0  ">
 
         <div class="navbar-phone-tab container-fluid   d-flex d-xl-none align-items-center justify-content-between  p-2 p-md-3   mt-0">
@@ -131,156 +131,13 @@
 
         </nav>
 
-    </header> -->
-
-
-    <!-- hero section -->
+    </header> 
 
 
 
+    <div class="container-fluid bg-info " style="height: 50vh;">
 
-
-
-
-    
-
-    <div class="hero-section container-fluid d-flex  justify-content-center ">
-
-
-
-        <div class="carousel-parent container-fluid p-0">
-
-
-
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel"
-                data-bs-interval="5000">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="https://images.unsplash.com/photo-1562774053-701939374585?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y29sbGVnZSUyMGNhbXB1c3xlbnwwfHwwfHx8MA%3D%3D"
-                            class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://cdn.pixabay.com/photo/2015/01/08/18/11/laptops-593296_1280.jpg"
-                            class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://images.unsplash.com/photo-1562774053-701939374585?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y29sbGVnZSUyMGNhbXB1c3xlbnwwfHwwfHx8MA%3D%3D"
-                            class="d-block w-100" alt="...">
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-
-
-
-        <!-- <div class="hero-section-image container p-0">
-
-            <div class="row p-0 justify-content-center">
-
-            <div class="hero-section-text-parent d-flex justify-content-center col-10 col-lg-6 ">
-                <div class="hero-section-text">
-                    <div class="hero-section-text-heading">
-                        <h1>
-                            Janhit College <br> of Law
-                        </h1>
-                        <p>Chandigarh University integrates groundbreaking research and inclusive education to shape
-                            professionals
-                            driving innovation, sustainability, and social impact.</p>
-                    </div>
-                    <div class="hero-section-text-button">
-                        <button class="hero-button">APPLAY TODAY</button>
-                    </div>
-                </div>
-
-            </div>
-            <div class="hero-section-form-parent col-10 d-flex justify-content-center col-lg-6 ">
-                <div class="hero-section-form col-10">
-                    <div class="hero-section-form-heading">
-                        <h3 class="normal-heading"> <span>Apply Today For</span></h3>
-                        <h3 class="normal-heading margin-hero">Janhit College
-                            of <br> Law</h3>
-                        <div class="Registration-color">
-                            <h4 class="small-heading">Registration End Date (Phase - 1): 30th May 2025</h4>
-                        </div>
-
-
-                    </div>
-                    <div class="hero-section-form-input">
-                        <form action="">
-                            <div class="student-name-email">
-                                <input type="text" placeholder="STUDENT NAME" class="same-input-padding input-width">
-                                <input type="email" placeholder="STUDENT EMAIL ID"
-                                    class="same-input-padding input-width">
-                            </div>
-
-                            <div class="student-name-email">
-
-                                <input type="tel" placeholder="STUDENT MOBILE NO"
-                                    class="same-input-padding input-width-100 ">
-                            </div>
-
-                            <div class="student-name-email">
-                                <input type="text" placeholder="SELECT DOB" onfocus="(this.type='date')"
-                                    class="same-input-padding input-width" />
-
-                                <select class="same-input-padding input-width" aria-placeholder="">
-                                    <option disabled selected>STUDENT CITY</option>
-                                    <option>Chandigarh</option>
-                                    <option>Ludhiana</option>
-                                    <option>Delhi</option>
-                                    <option>Mohali</option>
-                                </select>
-                            </div>
-                            <div class="student-name-email">
-                                <select class="same-input-padding input-width-100">
-                                    <option value="" disabled selected>SELECT PROGRAM</option>
-                                    <option>BCA</option>
-                                    <option>BA</option>
-                                    <option>BBA</option>
-                                    <option>BCOM</option>
-                                    <option>BSE-IT</option>
-                                </select>
-                            </div>
-                        </form>
-                    </div>
-
-                    <div class="hero-section-form-para-parent">
-                        <div class="hero-section-form-para">
-
-                            <p>By submitting this form, I agree to receive notifications from the University in the form
-                                of
-                                SMS/E-mail/Call.</p>
-                        </div>
-                    </div>
-
-                    <div class="hero-section-form-button">
-                        <button class="form-button"> APPLAY NOW</button>
-                    </div>
-
-                    <div class="hero-section-form-login">
-                        <h4 class="small-heading">Already Registered ? Click to <span><a href="">Login</a></span></h4>
-
-                    </div>
-
-
-
-
-
-
-
-
-                </div>
-            </div>
-            </div>
-
-
-
-        </div> -->
-
-    </div> 
-
+    </div>
 
     <!-- cources section  -->
 
