--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- header  start  -->
 
-    <header class="navigation container-fluid  p-0  ">
+    <header id="navigation" class="navigation container-fluid  p-0  ">
 
         <div class=" navbar-phone-tab container-fluid   d-flex d-xl-none align-items-center justify-content-between  p-2 p-md-3   mt-0"
             id="phone_nav">
@@ -726,15 +726,15 @@
 
     <section class="news_section container-fluid px-2 px-sm-0  ">
         <div class="container d-flex flex-column align-items-center p-0">
-            <div class="mainheading-news text-center col-12 col-md-10 col-lg-8">
-                <h2>News and Events</h2>
-                <p>From our students clinching global honors to the university soaring in national and international
+            <div class="mainheading-news text-start text-md-center col-12 col-md-10 col-lg-8">
+                <h2 class="mean-heading-about mb-2">News and Events</h2>
+                <p class="para mb-3 mb-sm-5">From our students clinching global honors to the university soaring in national and international
                     rankings,<br> our triumphs consistently illuminate our path in the spotlight.</p>
             </div>
 
             <div class="row g-4 d-flex justify-content-center">
 
-                <div class="col-xl-6 col-lg-6">
+                <div class="col-xl-5 col-lg-6">
                     <div class="card-news p-0 border-0 position-relative h-100 bigNews">
                         <div class="card-body  ">
                         </div>
@@ -747,12 +747,12 @@
                     </div>
                 </div>
 
-                <div class="col-xl-6 col-lg-6">
+                <div class="col-xl-5 col-lg-6">
                     <div class="row g-3">
                         <div class="col-lg-12 col-md-6 ">
                             <div class="card-news p-0 border-0 position-relative h-100 ">
                                 <div class="row">
-                                    <div class="col-lg-4 col-md-12 newsImg-sm"> </div>
+                                    <div class="col-lg-4 col-md-12 newsImg-sm1"> </div>
                                     <div class="col-lg-8 col-md-12 p-4 ">
                                         <h3>Chandigarh University becomes India's First ABET Accredited Private
                                             University</h3>
@@ -767,7 +767,7 @@
                         <div class="col-lg-12 col-md-6 ">
                             <div class="card-news p-0 border-0 position-relative  ">
                                 <div class="row">
-                                    <div class="col-lg-4 col-md-12 newsImg-sm"></div>
+                                    <div class="col-lg-4 col-md-12 newsImg-sm2"></div>
                                     <div class="col-lg-8 col-md-12 p-4">
                                         <h3>CU Alumnus Develops India's First LLM-based Chatbot for Cybercrime
                                             Prevention</h3>
