--- a/index.html
+++ b/index.html
@@ -724,9 +724,9 @@
 
     
 
-    <section class="news_section container-fluid px-2 px-sm-0  ">
+    <section class="news_section bg-white container-fluid px-2 px-sm-0  ">
         <div class="container d-flex flex-column align-items-center p-0">
-            <div class="mainheading-news text-start  col-12">
+            <div class="mainheading-news text-start  text-md-center  col-12">
                 <h2 class="mean-heading-about mb-2">News and Events</h2>
                 <p class="para mb-3 mb-sm-5">From our students clinching global honors to the university soaring in national and international
                     rankings,<br> our triumphs consistently illuminate our path in the spotlight.</p>
@@ -740,8 +740,8 @@
                         </div>
                         <div class="card-content border-0 p-4   text-white" style="z-index: 1;">
                             <h3 class=""> Debate Competition on 'One Nation, One Election'</h3>
-                            <p >A debate competition was organized on the topic "One Nation, One Election," encouraging students to engage in critical discussions about electoral reforms in India. Winners were awarded for their insightful arguments and public speaking skills. </p>
-                            <button class="cource-button">read more</button>
+                            <p class="para">A debate competition was organized on the topic "One Nation, One Election," encouraging students to engage in critical discussions about electoral reforms in India. Winners were awarded for their insightful arguments and public speaking skills. </p>
+                            <button class="cource-button mt-2">read more</button>
                         </div>
                     </div>
                 </div>
@@ -754,8 +754,8 @@
                                     <div class="col-lg-4 col-md-12 newsImg-sm1"> </div>
                                     <div class="col-lg-8 col-md-12 p-4 ">
                                         <h3> Legal Aid Centre Inaugurated on Legal Services Day</h3>
-                                        <p>On the occasion of Legal Services Day, Janhit College of Law inaugurated a Legal Aid Centre in Greater Noida. This initiative aims to provide free legal assistance to those in need, reinforcing the college's commitment to social justice and community service.</p>
-                                        <button class="cource-button">read more</button>
+                                        <p class="para">On the occasion of Legal Services Day, Janhit College of Law inaugurated a Legal Aid Centre in Greater Noida. This initiative aims to provide free legal assistance to those in need, reinforcing the college's commitment to social justice and community service.</p>
+                                        <button class="cource-button mt-2">read more</button>
                                        
                                     </div>
                                 </div>
@@ -767,8 +767,8 @@
                                     <div class="col-lg-4 col-md-12 newsImg-sm2"></div>
                                     <div class="col-lg-8 col-md-12 p-4">
                                         <h3>Annual Sports Day Celebrated with Enthusiasm</h3>
-                                        <p>The college recently celebrated its Annual Sports Day, where students showcased their athletic talents across various events. The event emphasized the importance of physical fitness and teamwork among students. </p>
-                                         <button class="cource-button">read more</button>   
+                                        <p class="para">The college recently celebrated its Annual Sports Day, where students showcased their athletic talents across various events. The event emphasized the importance of physical fitness and teamwork among students. </p>
+                                         <button class="cource-button mt-2">read more</button>   
                                     </div>
                                 </div>
                             </div>
