--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="helpline-no p-2 p-md-2    d-flex justify-content-between align-items-center ">
                 <a class="d-flex helpline-no-1 justify-content-start align-items-center gap-2" href="#">
 
-                    <img src="./media/phone-icon.webp" width="30" alt="">
+                    <img src="./images/phone-icon.webp" width="30" alt="">
 
                     <div class="d-none d-sm-block">
                         <p class="sub-paragraph ">admission Helpline</p>
@@ -808,12 +808,10 @@
             <div class="row  g-5 p-0 m-0 ">
 
                 <div
-                    class="col-12 footer-heading py-2 d-flex flex-column justify-content-center align-items-center mt-0  ">
+                    class="  footer-heading  d-flex flex-column justify-content-center align-items-center mt-0  ">
                     <img src="./media/JANHIT LOGO/JANHIT LOGO (PNG).png" alt="">
 
-                    <h2>
-                        janhit college of law
-                    </h2>
+                   
 
                 </div>
 
