--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="helpline-no py-3 px-lg-4   d-flex justify-content-between align-items-center ">
                     <a class="d-flex helpline-no-1 justify-content-start align-items-center gap-2" href="#">
 
-                        <img src="./media/phone-icon.webp" width="30" alt="">
+                        <img src="./images/phone-icon.webp" width="40" alt="">
 
 
                         <div class="">
